--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -116,12 +116,6 @@ button:not(.btn) {
   }
 }
 
-/* 24px is material icons best size and 14px is default font size */
-// $icon-size: (24px / 14px) + rem;
-@function icon-size($base-size: 24px) {
-  @return ($base-size / 14px) + rem;
-}
-
 /* Source: https://google.github.io/material-design-icons/ */
 .material-icons,
 .md-24 { font-size: icon-size(); }
